# Rate-Monitor-Template

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.example.yml  targets.example.yml
docs/: CONFIG_GUIDE.md  SECURITY_AND_LEGAL.md  architecture.md  operations.md  testing.md
sample_output/: rates.csv  rates.sample.csv
src/rate_monitor/: __init__.py  analyzer.py  cli.py  config.py  db.py  exporter.py  fetcher.py  notifier.py  parser.py  scheduler_stub.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_db.py  test_exporter.py  test_fetcher.py  test_notifier.py  test_parser.py  test_scheduler_stub.py  test_smoke.py
